# lazy-image

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  FUZZING.md  LICENSE  README.ja.md  README.md  RELEASE_READINESS.md  SECURITY.md  SHARP_COMPARISON.md  index.d.ts  index.js  lcov.info  out_rust.avif  package-lock.json  package.json  test.js  tsconfig.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  bench.yml  benchmark-regression.yml  fuzz.yml  security.yml
benches/: benchmark.rs  decode-only.bench.js  memory_semaphore.rs
benchmark-data/: data.js
docs/: ADR-001-toBuffer-destructive-behavior.md  API.md  ARCHITECTURE.md  AVIF_ICC_EVALUATION.md  COMPATIBILITY.md  ERROR_CODES.md  INPUT_VALIDATION.md  ISSUE_PRIORITY_SUMMARY.md  METRICS_CONTRACT.md  MIGRATION_FROM_SHARP.md  NPM_TOKEN_SETUP.md  OPERATIONS.md  PERFORMANCE.md  QUALITY_EFFORT_SPEED_MAPPING.md  QUALITY_SEMANTICS.md  REVIEW_FOLLOWUP.md  ROADMAP.md  SEMVER_POLICY.md  THREAD_MODEL.md  TROUBLESHOOTING.md  TRUE_BENCHMARKS.md  VERSIONING_PLAN.md  VERSION_HISTORY.md  ZERO_COPY.md  metrics-api.md  metrics-schema.json
docs/release/: v0.10.0-release-plan.md
docs/scripts/: measure-zero-copy.js
examples/: stress_test.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: batch_concurrent.rs  decode_avif.rs  decode_from_buffer.rs  encode_to_format.rs  exif_parse.rs  firewall_bypass.rs  icc_profile.rs  inspect_header.rs  metrics_processing.rs  pipeline_ops.rs  streaming_pipeline.rs
npm/darwin-arm64/: package.json
scripts/: create-empty-packages.sh  download-and-publish.sh  publish-all-platforms.sh  publish-platform.sh  setup-and-publish.sh  sync-version.js
spec/: errors.md  limits.md  metadata.md  pipeline.md  quality.md  resize.md
src/: engine.rs  error.rs  lib.rs  ops.rs
src/codecs/: avif_safe.rs  mod.rs
src/engine/: api.rs  common.rs  decoder.rs  encoder.rs  firewall.rs  io.rs  memory.rs  pipeline.rs  pool.rs  stress.rs  tasks.rs
streaming/: pipeline.js
test/: TEST_REVIEW.md  basic.test.js  benchmark-sharp.js  create-test-image.js  edge-cases.test.js
test/benchmarks/: convert-only.bench.js  extract-comparison.bench.js  pipeline-smoke.bench.js  readme-verification.bench.js  sharp-comparison.bench.js
test/fixtures/: create-exif-test-image.js  test_100KB.avif  test_92kb_input.avif
test/golden/: cases.js  expected.json
test/helpers/: create-size-fixtures-sharp.js  create-test-image.js  golden.js  paths.js  quality.js
test/integration/: basic.test.js  concurrency-validation.test.js  deprecation-warning.test.js  edge-cases.test.js  exif-roundtrip.test.js  extract.test.js  firewall.test.js  golden.test.js  input-validation.test.js  metadata-options.test.js  quality-metrics.test.js  run.js  streaming.test.js
test/js/: run-specs.js
test/js/benchmarks/: convert-only.bench.js  pipeline-smoke.bench.js  readme-verification.bench.js  sharp-comparison.bench.js
test/js/helpers/: create-test-image.js  paths.js
test/js/specs/: basic.test.js  deprecation-warning.test.js  edge-cases.test.js  thread-pool-env.test.js  type-improvements.test.js  zero-copy-safety.test.js
test/js/type-safety/: typescript-typecheck.test.ts
test/type-safety/: runtime-type-safety.test.js  typescript-typecheck.test.ts
test/unit/: cow_debug.test.js
tests/: edge_cases.rs  fuzz_regression.rs  integration_tests.rs  napi_tests.rs  property_based.rs
