[package]
name = "lazy-image"
version = "0.8.6"
edition = "2021"
description = "Next-gen image processing engine - faster, smaller, better than sharp"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi", "jemalloc"]
napi = ["dep:napi", "dep:napi-derive"]
jemalloc = ["dep:tikv-jemallocator"]
fuzzing = []
stress = []

[[example]]
name = "stress_test"
required-features = ["stress"]

[dependencies]
# NAPI binding (optional - only needed for Node.js bindings)
napi = { version = "2.14", features = ["async"], optional = true }
napi-derive = { version = "2.14", optional = true }

# Image decoding/encoding
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }

# SIMD-accelerated image resizing - this is where we catch libvips
fast_image_resize = "5"

# High-quality JPEG encoding - the core of our advantage over sharp
mozjpeg = "0.10"

# WebP encoding
webp = "0.3"

# AVIF encoding via libavif - AOMedia reference implementation with full ICC profile support
# Disable default features to avoid dav1d (requires meson build), only enable rav1e for encoding
libavif-sys = { version = "0.17", default-features = false, features = ["codec-rav1e"] }

# ICC profile extraction from image containers
img-parts = "0.3"

# Compression for PNG ICC chunks
flate2 = "1.0"

# Temporary file handling
tempfile = "3.10"

# Parallel processing for batch operations
rayon = "1.8"

# Memory mapping for zero-copy file access
memmap2 = "0.9"

# Error handling
thiserror = "1.0"

# System calls for CPU time and memory tracking
libc = "0.2"

# Memory allocator optimization - jemalloc for better performance
# Note: jemalloc is not supported on Windows/MSVC, so we use target-specific dependencies
# disable_initial_exec_tls feature is required for Node.js native module compatibility
# (prevents "cannot allocate memory in static TLS block" error)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true, features = ["disable_initial_exec_tls"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

# 【重要】依存関係（mozjpeg, ravif等）はデバッグビルド時も最適化する
# これがないと、ASanテスト中の画像処理が激重でタイムアウトする
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
