[package]
name = "lazy-image"
version = "0.10.1"
edition = "2021"
description = "Next-gen image processing engine - faster, smaller, better than sharp"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi", "jemalloc"]
napi = ["dep:napi", "dep:napi-derive"]
jemalloc = ["dep:tikv-jemallocator"]
fuzzing = []
stress = []
cow-debug = ["tracing", "once_cell"]

[[example]]
name = "stress_test"
required-features = ["stress"]

[dependencies]
# NAPI binding (optional - only needed for Node.js bindings)
napi = { version = "3.8", features = ["async"], optional = true }
napi-derive = { version = "3.5.1", optional = true }

# Image decoding/encoding
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
# EXIF parsing (Orientation tag extraction for auto-orient)
exif = { package = "kamadak-exif", version = "0.6.1" }
# EXIF read/write with tag-level access (MIT/Apache-2.0, pure Rust)
# Used for Orientation reset and GPS stripping - exceeds Sharp's metadata handling
little_exif = "0.6"
# PNG optimization (disable default features to avoid clap/zopfli bloat)
oxipng = { version = "10.1", default-features = false, features = ["parallel"] }

# SIMD-accelerated image resizing - this is where we catch libvips
# Enable rayon feature to allow parallel resize paths; disable default to avoid pulling in
# the `image` crate interop (we use fir::images::Image directly)
fast_image_resize = { version = "6", default-features = false, features = ["rayon"] }

# High-quality JPEG encoding - the core of our advantage over sharp
mozjpeg = "0.10"

# WebP encoding
webp = "0.3"

# PNG decoding (SIMD最適化デコーダ)
# zune-png 0.5 and zune-jpeg both use zune-core 0.5 (single version in tree).
zune-png = "0.5"
zune-core = "0.5"

# AVIF encoding via libavif - AOMedia reference implementation with full ICC profile support
# Disable default features to avoid dav1d (requires meson build), only enable rav1e for encoding
libavif-sys = { version = "0.17", default-features = false, features = ["codec-rav1e"] }

# Debug/logging (only used when cow-debug feature is enabled)
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }
once_cell = { version = "1.19", optional = true }

# ICC profile extraction from image containers
img-parts = "0.4"

# Compression for PNG ICC chunks (used in extract_icc_from_png_direct)
flate2 = "1.1"

# Temporary file handling
tempfile = "3.10"

# Parallel processing for batch operations
rayon = "1.8"

# Lightweight static bit flags for operation contracts
bitflags = "2.6"

# Memory mapping for zero-copy file access
memmap2 = "0.9"

# Error handling
thiserror = "2.0"

# System calls for CPU time and memory tracking
libc = "0.2"

# Fast mutex/condvar for contention-heavy semaphore
parking_lot = "0.12"

# Memory allocator optimization - jemalloc for better performance
# Note: jemalloc is not supported on Windows/MSVC, so we use target-specific dependencies
# disable_initial_exec_tls feature is required for Node.js native module compatibility
# (prevents "cannot allocate memory in static TLS block" error)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true, features = ["disable_initial_exec_tls"] }

[dev-dependencies]
criterion = "0.8"
proptest = "1.4"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "memory_semaphore"
harness = false

# 【重要】依存関係（mozjpeg, ravif等）はデバッグビルド時も最適化する
# これがないと、ASanテスト中の画像処理が激重でタイムアウトする
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true

# Aggressively optimize non-codec dependencies for size in release builds.
# These crates aren't in hot image-processing loops, so "z" is safe.
[profile.release.package.oxipng]
opt-level = "z"
[profile.release.package.image]
opt-level = "z"
[profile.release.package.png]
opt-level = "z"
[profile.release.package.rayon]
opt-level = "z"
[profile.release.package.rayon-core]
opt-level = "z"
[profile.release.package.flate2]
opt-level = "z"
[profile.release.package.miniz_oxide]
opt-level = "z"
[profile.release.package.little_exif]
opt-level = "z"
[profile.release.package.kamadak-exif]
opt-level = "z"
[profile.release.package.img-parts]
opt-level = "z"
[profile.release.package.napi]
opt-level = "z"
[profile.release.package.napi-sys]
opt-level = "z"
